grid styling overflow bug

--- a/src/components/Grid/style.scss
+++ b/src/components/Grid/style.scss
@@ -23,8 +23,15 @@
 .col {
     position: relative;
     max-width: 100%;
-    min-height: 1px;
-    padding:10px;
+    
+    > div {
+        margin:10px;
+    }
+
+    > h1{
+        margin:0px 10px 0px 10px;
+    }
+
 }
 
 .col-1 {
